@@ -50,10 +50,11 @@ extern "C" {
 #define IPMI_FRU_PARSE_ERR_FRU_SENTINEL_VALUE_NOT_FOUND           21
 #define IPMI_FRU_PARSE_ERR_OVERFLOW                               22
 #define IPMI_FRU_PARSE_ERR_OUT_OF_MEMORY                          23
-#define IPMI_FRU_PARSE_ERR_IPMI_ERROR                             24
-#define IPMI_FRU_PARSE_ERR_SYSTEM_ERROR                           25
-#define IPMI_FRU_PARSE_ERR_INTERNAL_ERROR                         26
-#define IPMI_FRU_PARSE_ERR_ERRNUMRANGE                            27
+#define IPMI_FRU_PARSE_ERR_DEVICE_BUSY                            24 
+#define IPMI_FRU_PARSE_ERR_IPMI_ERROR                             25
+#define IPMI_FRU_PARSE_ERR_SYSTEM_ERROR                           26
+#define IPMI_FRU_PARSE_ERR_INTERNAL_ERROR                         27
+#define IPMI_FRU_PARSE_ERR_ERRNUMRANGE                            28
 
 #define IPMI_FRU_PARSE_FLAGS_DEFAULT                              0x0000
 #define IPMI_FRU_PARSE_FLAGS_DEBUG_DUMP                           0x0001
