@@ -1,5 +1,11 @@
 2011-12-19  Albert Chu <chu11@llnl.gov>
 
+	* libfreeipmi/fru-parse/: Support IPMI_FRU_PARSE_ERR_DEVICE_BUSY error code.
+
+	* ipmi-fru/: Do not consider a busy device a fatal error.
+	
+2011-12-19  Albert Chu <chu11@llnl.gov>
+
 	* libfreeipmi/: Support IPMI_FLAGS_IGNORE_AUTHENTICATION_CODE
 	workaround flag.
 
